--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "6.1",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.0.0",
+    "@types/express": "^4.17.18",
+    "@types/node": "^18.18.3",
     "typescript": "^4.7.4"
   }
 }
