--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.1",
     "mongoose": "^7.5.3",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
   },
