--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.50.0",
     "express": "^4.18.2",
+    "forever-monitor": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.1",
     "mongoose": "^7.5.3",
