--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Express and MongoDB backend",
   "main": "src/server.js",
   "scripts": {
-    "start": "npx tsc && node build/server.js",
+    "start": "npx tsc && pm2 start build/server.js",
     "dev": "npx tsc && nodemon build/server.js",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix && prettier --write src/"
@@ -21,11 +21,9 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.50.0",
     "express": "^4.18.2",
-    "forever-monitor": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.1",
     "mongoose": "^7.5.3",
-    "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
   },
