--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.1",
     "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "prettier": "^3.0.3"
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.8.4",
     "typescript": "^5.2.2"
   }
