--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "npx tsc && node --inspect build/server.js",
-    "dev": "rm -r build/ && npx tsc && nodemon build/server.js",
+    "dev": "npx tsc && nodemon build/server.js",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix && prettier --write src/"
   },
@@ -14,7 +14,9 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "base64-img": "^1.0.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,12 +27,14 @@
     "mongodb": "6.1",
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
+    "node-base64-image": "^2.0.5",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "prettier": "^3.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
+    "@types/body-parser": "^1.19.3",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
